--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
     <header id="header">
       <div class='logo'>
-        <a class="logo" href='index.html'>{{logo}}</a>
+        <a class="logo" href='index.html'><img src="{{logoPath}}"></a>
         <a id="menuButton" href="#menu"><span class="material-symbols-outlined">menu</span></a>
       </div>
     </header>
@@ -76,7 +76,7 @@
         <li><a href="presti.html" style="font-family: 'Presti VF Regular';font-size: 5em;line-height: 1.4em;">Presti</a></li>
         <li><a href="proforma.html" style="font-family: 'Proforma Book';font-size: 3em;line-height: 1.4em;">Proforma</a></li>
         <li><a href="powerlift.html" style="font-family: 'PowerLift Tight';font-size: 3em;line-height: 1.4em;">Powerlift</a></li>
-        <li><a href="responder.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.8em;">Responder P</a></li>
+        <li><a href="responder-p.html" style="font-family: 'Responder P VF Regular';font-size: 3em;line-height: 1.8em;">Responder P</a></li>
         
         <li><a href="upgrade.html" style="font-family: 'Upgrade Thin';font-size: 5em;line-height: 1.4em;">Upgrade</a></li>
         <li><a href="about-typetr.html">About TYPETR</a></li>
@@ -87,7 +87,7 @@
     <div class="block firstblock">   
       <div class="header">
         <div class="slideshow">
-          {{slideShow}}
+          {{page.slideShow}}
         </div>
           <button class="slideshow-arrow left">&larr;</button>
           <button class="slideshow-arrow right">&rarr;</button>
@@ -117,7 +117,7 @@
       {{page.fontPromo('responder-p-vf', typeTester=True)}}
     </div>
 
-    {{page.getFooter()}}
+    {{page.footer}}
 
 </body>
 
