--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 
     <header id="header">
       <div class='logo'>
-        <a class="logo" href='index.html'><img src="{{logoPath}}"></a>
+        <a class="logo" href='index.html'><img src="{{page.logo.path}}"></a>
         <a id="menuButton" href="#menu"><span class="material-symbols-outlined">menu</span></a>
       </div>
     </header>
@@ -98,6 +98,7 @@
       </div>
     </div>
 
+    {{page.aaaaaa()}}
     <div class="block-small">   
       {{page.fontPromo('tp-upgrade', imageRight=False, typeTester=True, characterViewer=False)}}
     </div>
