--- a/templates/index.html
+++ b/templates/index.html
@@ -20,14 +20,19 @@
     <!-- Presti Deck -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDIwOTIwNzE5MjI1Nw%3D%3D.css" rel="stylesheet">  
     
+    <!-- Presti Text -->
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4NDUxMTg5MzMzNDc2OA%3D%3D.css" rel="stylesheet">
+
     <!-- Upgrade -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NTAxMjU0MzExMzIzNQ%3D%3D.css" rel="stylesheet">
     
-    <!-- Responder VF -->
+    <!-- Responder P VF -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE4MDMzNDQ4MDM0NQ%3D%3D.css" rel="stylesheet">
-    
-    <!-- Responder P -->
+  
+    <!-- Responder P
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
+    -->
+
     <!-- Proforma Ultra Light
          Proforma Ultra Light Italic
          Proforma Light
@@ -42,7 +47,21 @@
          Proforma Bold Italic
     -->
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5MzI5Mjk1Mzk3MTYyOQ%3D%3D.css" rel="stylesheet">
-    
+
+    <!-- Proforma Pro 
+        TP Proforma Pro Thin
+        TP Proforma Pro Thin Italic
+        TP Proforma Pro Regular
+        TP Proforma Pro Regular Italic
+        TP Proforma Pro Medium
+        TP Proforma Pro Medium Italic
+        TP Proforma Pro Bold
+        TP Proforma Pro Bold Italic
+        TP Proforma Pro Black
+        TP Proforma Pro Black Italic
+    -->    
+    <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MjAwNTQyNzc2NDEzNjE1OTkxNw%3D%3D.css" rel="stylesheet">
+
     <!-- PowerLift Tight 
          PowerLift Tight Outline 
     -->
@@ -144,8 +163,25 @@
             </div>
             <div class="column responder-p-regular">
                 <h1 class="responder-p-bold size36">Responder&nbsp;P</h1>
-                <p class="size24">
+                <p class="size28"> <!-- Slightly larger from .size24 -->
                     TYPETR Responder P captures the character of Petr’s handwriting, blending authenticity with typographic control. With a range of OpenType features, you can fine-tune its appearance—adjusting small caps, alternates, and connection levels to suit everything from casual notes to expressive branding. It’s handwriting, refined for design.
+                </p>
+            </div>
+        </div>
+
+        <div class="row type-tester">
+            
+            <fontdue-type-testers collection-id="Rm9udENvbGxlY3Rpb246MjAwNTQyNzc2NDEzNjE1OTkxNw=="></fontdue-type-testers>
+        </div>
+
+        <div class="row">
+            <div class="column">
+                <div class="image" style="background-image: url('images/2025/Proforma-Pro-w.png');"></div>
+            </div>
+            <div class="column proforma-pro">
+                <h1 class="proforma-pro-bold size36">Proforma Pro</h1>
+                <p class="size24">
+                    TYPETR Proforma Pro is a comprehensive redesign of the classic Proforma typeface, celebrating over 30 years of typographic excellence. Now completely renewed, it features an extended glyph set covering a wide spectrum of Latin-based languages. Enhanced with a rich array of OpenType features — including small caps, superior/inferior characters, and multiple figure styles — Proforma Pro brings timeless clarity and modern versatility to contemporary typography.
                 </p>
             </div>
         </div>
@@ -156,12 +192,12 @@
 
         <div class="row">
             <div class="column">
-                <div class="image" style="background-image: url('images/2023/Upgrade-202302 - UP in use - Take your bag.jpg');"></div>
+                <div class="image" style="background-image: url('images/2022/Proforma_in_use_04_things_to_forget4.jpg');"></div>
             </div>
             <div class="column proforma">
-                <h1 class="proforma-bold size36">Proforma</h1>
+                <h1 class="proforma-bold size36">Proforma (Original) — A Landmark</h1>
                 <p class="size24">
-                    TYPETR Proforma Pro is a comprehensive redesign of the renowned Proforma typeface, celebrating over 30 years of typographic excellence. Now completely renewed, it features an extended glyph set covering a wide spectrum of Latin-based languages. Enhanced with a rich array of OpenType features — including small caps, superior/inferior characters, and multiple figure styles — Proforma Pro brings timeless clarity and modern versatility to contemporary typography.
+                    Originally released by Font Bureau in the early 1990s, Proforma was a groundbreaking typeface that set new standards for digital text typography. Designed for clarity and efficiency in long-form reading, it combines classical proportions with a contemporary sensibility, balancing robust structure and subtle detail. Its carefully engineered spacing and intelligent use of contrast made it a favorite among typographers for editorial, corporate, and institutional use. Proforma remains a milestone in type design—timeless, readable, and remarkably forward-thinking. Also find the redesigned Proforma Pro.
                 </p>
             </div>
         </div>
