--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -149,18 +149,67 @@ header {
     font-size: 64px;
 }
 
-.smallcaps {
-    font-feature-settings: 'smcp' 1; /* Small caps */
+.liga {
+    font-feature-settings: 'liga' 1; /* Ligatures is default on */
 }
-.oldstyle-figures {
+.no-liga {
+    font-feature-settings: 'liga' 0; 
+}
+
+.frac {
+    font-feature-settings: 'frac' 1; /* Fractions */    
+}
+.tnum {
+    font-feature-settings: 'tnum' 1; /* Table figures */
+}
+.onum {
     font-feature-settings: 'onum' 1; /* Old style figures */
 }
-.superiors {
-    font-feature-settings: 'sups' 1; /* Superior figures */
+.sups {
+    font-feature-settings: 'sups' 1; /* Superior figures  & lower case*/
 }
-.inferiors {
-    font-feature-settings: 'sinf' 1; /* Inferiors figures */
+.sinf {
+    font-feature-settings: 'sinf' 1; /* Inferiors figures & lower case*/
 }
+
+.smcp {
+    font-feature-settings: 'smcp' 1; /* Small caps */
+}
+.c2sc {
+    font-feature-settings: 'c2sc' 1;
+}
+.c2sc-smcp {
+    font-feature-settings: 'smcp' 1, 'c2sc' 1;
+}
+
+.ss01 {
+    font-feature-settings: 'ss01' 1;
+}
+.no-ss01 {
+    font-feature-settings: 'ss01' 0;
+}
+.ss02 {
+    font-feature-settings: 'ss02' 1;
+}
+.ss03 {
+    font-feature-settings: 'ss03' 1;
+}
+.ss04 {
+    font-feature-settings: 'ss04' 1;
+}
+.ss05 {
+    font-feature-settings: 'ss05' 1;
+}
+.ss06 {
+    font-feature-settings: 'ss06' 1;
+}
+.ss07 {
+    font-feature-settings: 'ss07' 1;
+}
+.ss08 {
+    font-feature-settings: 'ss08' 1;
+}
+
 /* Header logo */
 
 header .logo { /* Floating left box with logo */
@@ -266,6 +315,18 @@ div.image {
     /*background-color: #f9f9f9;*/
     /*padding: 20px;*/
     margin: 0 40px 0 0;
+}
+.column14 {
+    /*flex: 1;*/
+    width: 25%;
+    box-sizing: border-box;
+    background-color: #F0F0F0;
+}
+.column34 {
+    /*flex: 1;*/
+    width: 75%;
+    box-sizing: border-box;
+    background-color: #F0F0F0;
 }
 
 /* Footer */
